--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -170,40 +170,83 @@ section {
     &.choose-us {
       .choose-us-container {
         .choose-card {
-         min-height: auto;
+          min-height: auto;
         }
       }
     }
   }
-  
 }
-
 
 //  place section
 
-section{
-  &.place{
-    .place-container{
-     
-          background: #D1E1F8;
-          padding: 68px 0 50px;
-          border-radius: 25px;
-          .place-card{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            justify-content: center;
-            img{
+section {
+  &.place {
+    .place-container {
+      background: #d1e1f8;
+      padding: 68px 0 50px;
+      border-radius: 25px;
+      .place-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        justify-content: center;
+        img {
+          width: 30px;
+        }
 
-              width: 30px;
-            }
+        h4,
+        p {
+          color: #402060;
+        }
+      }
+    }
+  }
+}
 
-            h4,p{
-              color:#402060;
-            }
+// our course section
+
+section {
+  &.courses {
+    .course-container {
+      .course-card {
+        padding: 15px 30px 40px;
+        background: #fff;
+        border-radius: 0px 50px 50px 50px;
+        margin-bottom: 30px;
+        min-height: 310px;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
+        transition: all 0.5s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+ 
+        img {
+          width: 140px;
+        }
+
+        .course-para{
+          height: 56px;
+          overflow: hidden;
+          p{
+            line-height: 26px;
           }
-      
+          
+        }
+        .view-more-btn{
+          display:none;
+        }
+
+        &:hover {
+          .course-para{
+            display: none;
+          }
+           .view-more-btn{
+            display:block;
+          }
+        }
+      }
     }
   }
 }
