--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -264,3 +264,14 @@ section {
     }
   }
 }
+
+// contact section
+section{
+  &.contact{
+    background-image: url('../images/bg01.jpg') ;
+    // background-size: cover;
+    // width: 100%;
+    // height:40vh;
+
+  }
+}
